Added Github action script

--- a/.github/workflows/schema_change.yml
+++ b/.github/workflows/schema_change.yml
@@ -2,7 +2,7 @@
 on:
   push:
     branches:
-      - master
+      - dev
     paths:
       - 'scripts/**'
 
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Checking out the repository
       - name: Retrieve repository
         uses: actions/checkout@v2
 
@@ -32,4 +32,4 @@ jobs:
           SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
         run: |
           pip install schemachange
-          schemachange -f $GITHUB_WORKSPACE/scripts -a $SNOWFLAKE_ACCOUNT -u $SNOWFLAKE_USERNAME -r $SNOWFLAKE_ROLE -w $SNOWFLAKE_WAREHOUSE -d $SNOWFLAKE_DATABASE -c $SNOWFLAKE_DATABASE.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
+          schemachange -f ./migrations/custom  -a $SF_ACCOUNT -u $SF_USERNAME -r $SF_ROLE -w $SF_WAREHOUSE -d $SF_DATABASE -c $CLONE_DB.SCHEMACHANGE.CHANGE_HISTORY_$ENV --create-change-history-table
