--- a/.github/workflows/schema_change.yml
+++ b/.github/workflows/schema_change.yml
@@ -24,12 +24,11 @@ jobs:
 
       - name: Execute schemachange
         env:
-          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-          SNOWFLAKE_URL: $${{secrets.SNOWFLAKE_URL}}
-          SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
-          SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
-          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+          SNOWFLAKE_ACCOUNT: "https://pbb47117.us-east-1.snowflakecomputing.com"
+          SNOWFLAKE_USERNAME: "ATUL1140"
+          SNOWFLAKE_ROLE: "ACCOUNTADMIN"
+          SNOWFLAKE_WAREHOUSE: "developer"
+          SNOWFLAKE_DATABASE: "RAW"
           SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
         run: |
           pip install schemachange
