--- a/.github/workflows/schema_change.yml
+++ b/.github/workflows/schema_change.yml
@@ -27,7 +27,7 @@ jobs:
           SNOWFLAKE_ACCOUNT: "pbb47117.us-east-1"
           SNOWFLAKE_USERNAME: "ATUL1140"
           SNOWFLAKE_ROLE: "ACCOUNTADMIN"
-          SNOWFLAKE_WAREHOUSE: "DEVELOPER"
+          SNOWFLAKE_WAREHOUSE: "COMPUTE-WH"
           SNOWFLAKE_DATABASE: "PRA_TEST"
           SNOWFLAKE_PASSWORD: 'Bangalore@0000'
         run: |
