--- a/.github/workflows/schema_change.yml
+++ b/.github/workflows/schema_change.yml
@@ -1,10 +1,10 @@
-# Triggers the action based on branch and path. 
+# Triggers the action based on branch and path.
 on:
   push:
     branches:
       - dev
     paths:
-      - './migrations/custom'
+      - './migrations/custom/**' # Adjusted to include all files under migrations/custom directory
 
   workflow_dispatch:
 
@@ -22,6 +22,10 @@ jobs:
         with:
           python-version: 3.8
 
+      - name: Install schemachange
+        run: |
+          pip install schemachange
+
       - name: Execute schemachange
         env:
           SNOWFLAKE_ACCOUNT: "pbb47117.us-east-1"
@@ -30,6 +34,14 @@ jobs:
           SNOWFLAKE_WAREHOUSE: "COMPUTE-WH"
           SNOWFLAKE_DATABASE: "PRA_TEST"
           SNOWFLAKE_PASSWORD: 'Bangalore@0000'
+          # CLONE_DB: "your_clone_db" # Replace with your specific clone database
+          # ENV: "your_env" # Replace with your specific environment
         run: |
-          pip install schemachange
-          schemachange -f ./migrations/custom  -a $SNOWFLAKE_ACCOUNT -u $SNOWFLAKE_USERNAME -r $SNOWFLAKE_ROLE -w $SNOWFLAKE_WAREHOUSE -d $SNOWFLAKE_DATABASE -c $CLONE_DB.SCHEMACHANGE.CHANGE_HISTORY_$ENV --create-change-history-table
+          schemachange -f ./migrations/custom \
+            -a $SNOWFLAKE_ACCOUNT \
+            -u $SNOWFLAKE_USERNAME \
+            -r $SNOWFLAKE_ROLE \
+            -w $SNOWFLAKE_WAREHOUSE \
+            -d $SNOWFLAKE_DATABASE \
+            -c $CLONE_DB.SCHEMACHANGE.CHANGE_HISTORY_$ENV \
+            --create-change-history-table
