--- a/.github/workflows/schema_change.yml
+++ b/.github/workflows/schema_change.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Install schemachange
         run: |
           pip install schemachange
+          pip install snowflake-connector-python
 
       - name: Execute schemachange
         env:
