--- a/.github/workflows/schema_change.yml
+++ b/.github/workflows/schema_change.yml
@@ -32,8 +32,8 @@ jobs:
           SNOWFLAKE_ACCOUNT: "NUDVUHU-JXB91605"
           SNOWFLAKE_USERNAME: "atul1140"
           SNOWFLAKE_ROLE: "ACCOUNTADMIN"
-          SNOWFLAKE_WAREHOUSE: "DEVELOPER"
-          SNOWFLAKE_DATABASE: "RAW.GIT"
+          SNOWFLAKE_WAREHOUSE: "COMPUTE_WH"
+          SNOWFLAKE_DATABASE: "PRA_DB"
           SNOWFLAKE_PASSWORD: 'Bangalore@0000'
  
         run: |
