--- a/.github/workflows/schema_change.yml
+++ b/.github/workflows/schema_change.yml
@@ -29,12 +29,12 @@ jobs:
 
       - name: Execute schemachange
         env:
-          SNOWFLAKE_ACCOUNT: "NUDVUHU-JXB91605"
-          SNOWFLAKE_USERNAME: "atul1140"
-          SNOWFLAKE_ROLE: "ACCOUNTADMIN"
-          SNOWFLAKE_WAREHOUSE: "COMPUTE_WH"
-          SNOWFLAKE_DATABASE: "PRA_DB"
-          SNOWFLAKE_PASSWORD: 'Bangalore@0000'
+          SNOWFLAKE_ACCOUNT: ${{secrets.SNOWFLAKE_ACCOUNT}}
+          SNOWFLAKE_USERNAME: ${{secrets.SNOWFLAKE_USERNAME}}
+          SNOWFLAKE_ROLE: ${{secrets.SNOWFLAKE_ROLE }}
+          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
           
  
         run: |
